--- a/style.css
+++ b/style.css
@@ -42,3 +42,17 @@ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 .mon{
 width: 30%;
 }
+.nav_button{
+    width: 50px;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-evenly;
+     align-items: center;
+}
+.nav_button img{
+    width: 50px;
+}
+.nav_button_text{
+margin-left: 40px;
+font-size: 40px;
+}
